<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.photobooph.MainActivity">

<item
    android:id="@+id/action_settings"
    android:background="?attr/colorPrimaryDark"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never"/>
<item
    android:id="@+id/action_album"
    android:background="?attr/colorPrimaryDark"
    android:orderInCategory="100"
    android:title="@string/action_album"
    app:showAsAction="never"/>

<item
    android:id="@+id/action_home"
    android:background="?attr/colorPrimaryDark"
    android:orderInCategory="100"
    android:title="@string/action_home"
    app:showAsAction="never"/>
</menu>
